2013-02-14  David Biesack  <sasdjb@d72933.na.sas.com>  (tiny change)

	* net/quickurl.el (quickurl-save-urls):
	Ensure quickurl-urls is not truncated on printing.  (Bug#9276)

2013-02-14  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el (ruby-parse-partial): Don't increase
	depth for unfinished percent literal.  Not using it in the caller.
	(ruby-move-to-block): Jump over multiline literals of all types,
	ignoring code-looking contents inside them.
	(ruby-add-log-current-method): Improve performance at the expense
	of accuracy.  `ruby-block-contains-point' is relatively slow, so
	only use it for method and singleton class blocks.

2013-02-13  Michael Albinus  <michael.albinus@gmx.de>

	Use ControlMaster where applicable.  (Bug#13677)

	* net/tramp.el (tramp-ssh-controlmaster-template): New defvar,
	replacing `tramp-detect-ssh-controlmaster'.
	(tramp-default-method): Use it.

	* net/tramp-sh.el (tramp-methods) [scp, scp1, scp2, scpx, sftp]:
	[rsync, ssh, ssh1, ssh2, sshx]: Add ControlPath and ControlMaster
	arguments.
	[scpc, rsyncc]: Remove methods.
	(top): Remove completion functions for "scpc", "rsyncc", "ssh1_old"
	and "ssh2_old".
	(tramp-do-copy-or-rename-file-out-of-band):  Change trace level.
	(tramp-maybe-open-connection): Reuse tmpfile for ControlPath.

2013-02-13  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/package.el (package--initialized): Move before first use.

2013-02-13  Jambunathan K  <kjambunathan@gmail.com>

	* icomplete.el (icomplete-hide-common-prefix):  New user option.
	(icomplete-first-match): New face.
	(icomplete-completions): Correct handling of "complete but not
	unique" (Bug#12638).

2013-02-13  YE Qianchuan  <stool.ye@gmail.com>  (tiny change)

	* descr-text.el (describe-char): Display the script (bug#13698).

2013-02-13  Stefan Monnier  <monnier@iro.umontreal.ca>

	* tmm.el: Use lexical-binding and current-active-maps.
	(tmm-menubar): Use map-keymap and pcase.
	(tmm--completion-table): New function.